syntax = "proto3";

option csharp_namespace = "GrpcService";

package organization;

// The Organization service definition.
service Organization {
  rpc AddOrganization (AddOrganizationRequest) returns (AddOrganizationResponse);

  rpc GetOrganization (GetOrganizationRequest) returns (OrganizationResponse);
  
  rpc DeleteOrganization (DeleteOrganizationRequest) returns (DeleteOrganizationResponse);
}

// The request message containing the organization's name and .
message AddOrganizationRequest {
  string Name = 1; 
  string Address = 2;
}

// The response message containing the added organization id.
message AddOrganizationResponse {
	int32 Id = 1;
}

// The request message containing the organization's id.
message GetOrganizationRequest {
  int32 Id = 1;
}

// The response message containing the organization.
message OrganizationResponse {
  string Name = 1; 
  string Address = 2;
  string UsersId = 3;
}

// The request message containing the organization's id.
message DeleteOrganizationRequest {
  int32 Id = 1;
}

// The response message containing the organization.
message DeleteOrganizationResponse {
  bool IsSuccess = 1;
}
